weekView: fixed task name caused cell overflow

--- a/client/src/pages/schedule/components/WeekView/index.scss
+++ b/client/src/pages/schedule/components/WeekView/index.scss
@@ -53,6 +53,7 @@ $bg-color: salmon;
 
         .task-cell {
           flex: 1;
+          max-width: calc(100% / 7);
           border-right: 1px dashed $border-color;
           border-bottom: 1px dashed $border-color;
 
